# momaku

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/actions/setup-ndi-sdk/: action.yml  install-linux.sh  install-macos.sh  install-windows.ps1  setup-vendored.ps1  setup-vendored.sh
.github/workflows/: ci.yml  release.yml
examples/: ndi-alpha-test.html
scripts/: _tauri-windows-env.ps1  tauri-build-mac.sh  tauri-build-windows.ps1  tauri-clippy-windows.ps1  tauri-dev-mac.sh  tauri-dev-windows.ps1  tauri-release-windows.ps1  vendor-ndi-sdk-from-local.ps1  verify-windows-bundle-dlls.ps1
src/: App.tsx  appSettings.ts  externalIcons.tsx  main.ts  main.tsx  nativeChromeGuards.ts  style.css
src-tauri/: Cargo.toml  build.rs  bundle-release-linux.json  bundle-release-macos.json  bundle-release-windows.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: servo_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  lib.rs  main.rs  settings.rs
src-tauri/src/engine/: config.rs  input.rs  kvm_ndi.rs  mod.rs  remote_input.rs  servo_delegate.rs  servo_thread.rs
