[package]
name = "momaku"
version = "0.1.0"
description = "Web page to NDI transmitter"
authors = ["momaku"]
edition = "2021"

[lib]
name = "momaku_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
grafton-ndi = { version = "0.11", features = ["tokio"] }
chromiumoxide = "0.9"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
