[package]
name = "momaku"
version = "0.1.0"
description = "Web page to NDI transmitter"
authors = ["momaku"]
edition = "2021"
rust-version = "1.86"

[lib]
name = "momaku_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# NDI Advanced SDK連動（grafton-ndiのasync完了コールバック等）。KVM APIはクレート未実装のため現状は効果限定。
ndi-kvm = ["grafton-ndi/advanced_sdk"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
opener = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = { version = "0.3", features = ["std", "async-await"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
grafton-ndi = { version = "0.11", features = ["tokio"] }

dpi = "0.1"
euclid = "0.22"
url = "2"

# Servo / tauri等がrustlsに`ring`と`aws_lc_rs`を同時に有効化することがあり、
# 既定プロバイダが曖昧になる。`lib::run` 冒頭で明示的にインストールする。
rustls = { version = "0.23", default-features = true }

tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# `no-wgl` pulls mozangle/egl + build_dlls, which mozangle only supports on Windows (see mozangle build.rs).
[target.'cfg(windows)'.dependencies]
servo = { version = "0.1", default-features = false, features = [
    "baked-in-resources",
    "clipboard",
    "js_jit",
    "no-wgl",
] }

[target.'cfg(not(windows))'.dependencies]
servo = { version = "0.1", default-features = false, features = [
    "baked-in-resources",
    "clipboard",
    "js_jit",
] }

[[example]]
name = "servo_smoke"
path = "examples/servo_smoke.rs"
